--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,22 +1,52 @@
-@import 'variables';
-body{
-    font-family: 'Karla';
+@import "variables";
+body {
+  font-family: "Karla";
 }
-.App{
-    background-color: $bodyColor;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    padding: 1.25em;
+.App {
+  background-color: $bodyColor;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 1.25em;
 }
-.main{
-    height: 400px;
-    max-width:800px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $primaryWhite;
-    border-radius: 10px;
+.main {
+  height: 400px;
+  max-width: 800px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $primaryWhite;
+  border-radius: 10px;
+  flex-direction: column;
+  gap: 1.5em;
+}
+.roll__btn {
+  all: unset;
+  background: #5035ff;
+  box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
+  border-radius: 3.81277px;
+  padding: 0.6em 1.8em;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16.384px;
+  line-height: 19px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  &:active{
+    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+  }
+}
+
+.title{
+
+}
+
+.instructions{
+  text-align: center;
+  padding: 0.4em;
 }
